--- a/apicockpit/src/main/webapp/index.html
+++ b/apicockpit/src/main/webapp/index.html
@@ -23,12 +23,16 @@
     <![endif]-->
     <jhi-main>
         <div class="app-loading">
-            <div class="lds-css ng-scope">
+            <div class="open-banking"></div>
+            <!-- <div class="lds-css ng-scope">
                 <div class="lds-pacman">
                     <div><div></div><div></div><div></div></div>
                     <div><div></div><div></div><div></div></div>
                 </div>
-            </div>
+                <div class="open-banking">
+
+                </div>
+            </div> -->
         </div>
         <div class="app-loading">
             <div id="jhipster-error" style="display:none">
