--- a/apicockpit/src/main/webapp/index.html
+++ b/apicockpit/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="content/css/loading.css">
     <link rel="stylesheet" href="content/css/paper-theme.css">
+    <scirpt src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></scirpt>
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
 </head>
 <body>
