--- a/apicockpit/src/main/webapp/index.html
+++ b/apicockpit/src/main/webapp/index.html
@@ -4,8 +4,8 @@
     <base href="./" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>apicockpit</title>
-    <meta name="description" content="Description for apicockpit">
+    <title>Open Banking Nigeria API Sandbox</title>
+    <meta name="description" content="Open Banking Nigeria API Sandbox">
     <meta name="google" value="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -25,7 +25,7 @@
     <jhi-main>
         <div class="app-loading">
             <div class="open-banking"></div>
-            <!-- <div class="lds-css ng-scope">
+            <div class="lds-css ng-scope">
                 <div class="lds-pacman">
                     <div><div></div><div></div><div></div></div>
                     <div><div></div><div></div><div></div></div>
@@ -33,7 +33,7 @@
                 <div class="open-banking">
 
                 </div>
-            </div> -->
+            </div>
         </div>
         <div class="app-loading">
             <div id="jhipster-error" style="display:none">
